# rv32i_sim_rust

./: Cargo.toml  README.md  sim_rust_rv32i.code-workspace
src/: main.rs
src/hardware/: bus.rs  memory.rs
